[package]
name = "fetcher"
description = "Data fetching and pipelining framework"
version = "0.15.0-alpha.2"
repository = "https://github.com/SergeyKasmy/fetcher"
license = "MPL-2.0"
edition.workspace = true

[workspace]
members = [".", "crates/non-non-full", "crates/staticstr"]

[workspace.package]
edition = "2024"

[features]
default = ["send", "scaffold", "all-sources", "all-actions", "all-sinks", "all-misc"]
send = []
scaffold = ["dep:tracing-journald", "dep:tracing-subscriber", "tokio/signal"]

all-sources = ["source-email", "source-reddit", "source-http"]
source-email = ["dep:async-imap", "dep:mailparse", "dep:webpki-roots", "source-email-tokio-rustls", "google-oauth2"]
source-email-tokio-rustls = ["dep:tokio-rustls"]
source-reddit = ["dep:roux"]
source-http = ["dep:reqwest", "dep:serde_json"]

all-actions = ["action-http", "action-feed", "action-json", "action-html", "action-html-decode"]
action-http = ["source-http"]
action-feed = ["dep:feed-rs"]
action-json = ["dep:serde_json"]
action-html = ["dep:scraper"]
action-html-decode = ["dep:html-escape"]

all-sinks = ["sink-telegram", "sink-discord"]
sink-telegram = ["dep:teloxide"]
sink-discord = ["dep:serenity"]

all-misc = ["google-oauth2"]
google-oauth2 = ["dep:reqwest", "dep:serde_json"]

[dependencies]
bon = "3.6.3"
chrono = { version = "0.4.41", features = ["serde"] }
either = "1.15.0"
futures = "0.3.31"
itertools = "0.14.0"
non-non-full = { version = "0.0.1", path = "crates/non-non-full", features = ["serde"] }
once_cell = "1.21.3"
rand = "0.9.1"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
staticstr = { version = "0.0.1", path = "crates/staticstr" }
tap = "1.0.1"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["fs", "io-std", "process", "macros", "io-util", "time", "sync", "rt"] }
tracing = "0.1.41"
url = "2.5.4"

## feature = "all-sources"
# email
async-imap = { version = "0.10.4", features = ["runtime-tokio"], default-features = false, optional = true }
mailparse = { version = "0.16.1", optional = true }
tokio-rustls = { version = "0.26.2", optional = true }
webpki-roots = { version = "1.0.0", optional = true }

# reddit
roux = { version = "2.2.14", default-features = false, features = ["rustls"], optional = true }


## feature = "all-actions"
# feed
feed-rs = { version = "2.3.1", optional = true }

# json
serde_json = { version = "1.0.140", optional = true }

# html
scraper = { version = "0.23.1", optional = true }

# html decode
html-escape = { version = "0.2.13", optional = true }


## feature = "all-sinks"
# telegram
teloxide = { version = "0.15.0", features = ["rustls", "throttle"], default-features = false, optional = true }

# discord
serenity = { version = "0.12.4", optional = true }


## shared dependencies
reqwest = { version = "0.12.15", features = ["rustls-tls", "gzip", "json", "cookies"], default-features = false, optional = true }


## feature = "scaffold"
tracing-journald = { version = "0.3.1", optional = true }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log", "time", "local-time"], optional = true }

[dev-dependencies]
assert_matches = "1.5"
tokio-test = "0.4.4"

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }

### Hand-picked restrictions (as of Rust 1.84.0)
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
doc_include_without_cfg = "warn"
error_impl_error = "warn"
exit = "warn"
filetype_is_file = "warn"
format_push_string = "warn"
let_underscore_untyped = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
missing_docs_in_private_items = "warn"
needless_raw_strings = "warn"
pathbuf_init_then_push = "warn"
print_stderr = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
str_to_string = "warn"
string_to_string = "warn"
tests_outside_test_module = "warn"
todo = "warn"
try_err = "warn"
unimplemented = "warn"
unused_result_ok = "warn"
unwrap_used = "warn"

### Overrides of overly restrictive pedantic and nursery lints with explanations
# matches!() adds too much noise for little benefit
equatable_if_let = "allow" 

# sometimes useful
explicit_deref_methods = "allow"

# too much noise for little benefit (may change in the future)
missing_const_for_fn = "allow"

# some types are more descriptive with modules name in the name, especially if this type is often used out of the context of this module
module_name_repetitions = "allow"

# "harder to read, false branch before true branch"
option_if_let_else = "allow" 

# sometimes makes the control flow harder to read, should be used at the developer's discretion
redundant_else = "allow"

# may be hard to understand what Self even is deep into a function's body
use_self = "allow"

# often a match can better highlight which branch is more important and draw attention to it
single_match_else = "allow"

# reverse order makes it more confusing, should be used at the developer's discretion
map_unwrap_or = "allow"
