[package]
name = "fetcher-config"
description = "fetcher config format and serialization/deserialization"
version = "0.13.1"
license = "MPL-2.0"
repository = "https://github.com/SergeyKasmy/fetcher"
edition = "2021"

[lints]
workspace = true

[dependencies]
fetcher-core = { version = "0.13.1", path = "../fetcher-core" }

chrono = "0.4.38"
serde = { version = "1.0.205", features = ["derive"] }
thiserror = "1.0.63"
tokio = "1.39.2"
tracing = "0.1.40"
url = "2.5.2"
serde_with = "3.9.0"
duration-str = { version = "0.5.1", default-features = false }
itertools = "0.10.5"
tap = "1.0.1"
