[package]
name = "fetcher-config"
description = "fetcher config format and serialization/deserialization"
version = "0.13.1"
license = "MPL-2.0"
repository = "https://github.com/SergeyKasmy/fetcher"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fetcher-core = { version = "0.13.1", path = "../fetcher-core" }

chrono = "0.4.38"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"
tokio = "1.41.1"
tracing = "0.1.41"
url = "2.5.4"
serde_with = "3.11.0"
duration-str = { version = "0.11.2", default-features = false }
itertools = "0.13.0"
tap = "1.0.1"
