[package]
name = "fetcher-config"
description = "fetcher config format and serialization/deserialization"
version = "0.14.0"
license = "MPL-2.0"
repository = "https://github.com/SergeyKasmy/fetcher"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fetcher-core = { version = "0.14.0", path = "../fetcher-core" }

chrono = "0.4.39"
serde = { version = "1.0.217", features = ["derive"] }
thiserror = "2.0.11"
tokio = "1.43.0"
tracing = "0.1.41"
url = "2.5.4"
serde_with = "3.12.0"
duration-str = { version = "0.12.0", default-features = false }
itertools = "0.14.0"
tap = "1.0.1"
