[package]
name = "fetcher-core"
description = "Core fetcher functionality"
version = "0.13.1"
license = "MPL-2.0"
repository = "https://github.com/SergeyKasmy/fetcher"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
egg-mode = { version = "0.16.1", features = ["rustls"], default-features = false }
either = "1.8.1"
feed-rs = "1.3.0"
futures = "0.3.28"
html-escape = "0.2.13"
imap = { version = "3.0.0-alpha.10", features = [ "rustls-tls" ], default-features = false }
itertools = "0.10.5"
mailparse = "0.14.0"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.8.1"
reqwest = { version = "0.11.18", features = ["rustls-tls", "gzip"], default-features = false }
roux = { version = "2.2.7", default-features = false, features = ["rustls"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serenity = "0.11.5"
soup-kuchiki = "0.5.0"
tap = "1.0.1"
teloxide = { version = "0.12.2", features = ["rustls", "throttle"], default-features = false }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["fs", "io-std", "process"] }
tracing = "0.1.37"
url = "2.3.1"

[dev-dependencies]
assert_matches = "1.5"
