[package]
name = "fetcher-core"
description = "Core fetcher functionality"
version = "0.13.1"
license = "MPL-2.0"
repository = "https://github.com/SergeyKasmy/fetcher"
edition = "2021"

[lints]
workspace = true

[dependencies]
async-trait = "0.1.81"
chrono = "0.4.38"
egg-mode = { version = "0.16.1", features = ["rustls"], default-features = false }
either = "1.13.0"
feed-rs = "1.5.3"
futures = "0.3.30"
html-escape = "0.2.13"
imap = { version = "3.0.0-alpha.14", features = [ "rustls-tls" ], default-features = false }
itertools = "0.10.5"
mailparse = "0.14.1"
once_cell = "1.19.0"
rand = "0.8.5"
regex = "1.10.6"
reqwest = { version = "0.11.27", features = ["rustls-tls", "gzip"], default-features = false }
roux = { version = "2.2.12", default-features = false, features = ["rustls"] }
serde = { version = "1.0.205", features = ["derive"] }
serde_json = "1.0.122"
serenity = "0.11.7"
soup-kuchiki = "0.5.0"
tap = "1.0.1"
teloxide = { version = "0.12.2", features = ["rustls", "throttle"], default-features = false }
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["fs", "io-std", "process"] }
tracing = "0.1.40"
url = "2.5.2"

[dev-dependencies]
assert_matches = "1.5"
