[package]
name = "fetcher-core"
description = "Core fetcher functionality"
version = "0.14.0"
license = "MPL-2.0"
repository = "https://github.com/SergeyKasmy/fetcher"
edition.workspace = true

[lints]
workspace = true

[dependencies]
async-trait = "0.1.83"
chrono = "0.4.38"
either = "1.13.0"
feed-rs = "2.2.0"
futures = "0.3.31"
html-escape = "0.2.13"
imap = { version = "3.0.0-alpha.14", features = [ "rustls-tls" ], default-features = false }
itertools = "0.13.0"
mailparse = "0.15.0"
once_cell = "1.20.2"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.9", features = ["rustls-tls", "gzip", "json"], default-features = false }
roux = { version = "2.2.13", default-features = false, features = ["rustls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serenity = "0.12.4"
soup-kuchiki = "0.5.0"
tap = "1.0.1"
teloxide = { version = "0.13.0", features = ["rustls", "throttle"], default-features = false }
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["fs", "io-std", "process"] }
tracing = "0.1.41"
url = "2.5.4"

[dev-dependencies]
assert_matches = "1.5"
