[package]
name = "fetcher"
description = "Automation and scalping tool"
version = "0.14.0"
license = "MPL-2.0"
repository = "https://github.com/SergeyKasmy/fetcher"
edition.workspace = true

[lints]
workspace = true

[dependencies]
fetcher-core = { version = "0.14.0", path = "../fetcher-core" }
fetcher-config = { version = "0.14.0", path = "../fetcher-config" }
color-eyre = { version = "0.6.2", package = "color-eyre-attach-report" }
figment = { version = "0.10.19", features = ["yaml"] }
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "tracing-log", "time", "local-time"] }
argh = "0.1.13"
directories = "6.0.0"
once_cell = "1.20.2"
walkdir = "2.5.0"
tap = "1.0.1"
async-trait = "0.1.85"
itertools = "0.14.0"
either = "1.13.0"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29.0", default-features = false, features = ["user"] }

[build-dependencies]
vergen-git2 = { version = "1.0.5", default-features = false }
