[package]
name = "non-non-full"
description = "Vec and String wrappers that assert the containers are always non-empty (or, ahem, non-non-full)"
version = "0.0.3"
repository = "https://github.com/SergeyKasmy/fetcher/crates/non-non-full"
license = "MPL-2.0"
edition.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }

[lints]
workspace = true
